fix on mobile version

--- a/css/my_attempt.css
+++ b/css/my_attempt.css
@@ -41,3 +41,8 @@
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .btn-primary:active:focus, .btn-primary:active:hover, .btn-primary.active:focus, .btn-primary.active:hover, .show > .btn-primary.dropdown-toggle, .show > .btn-primary.dropdown-toggle:focus, .show > .btn-primary.dropdown-toggle:hover {
     background-color: #022B3A;}
+
+@media screen and (max-width: 991px) {
+    .sidebar-collapse .navbar-collapse:before {
+        background: #1F7A8C;
+        background:linear-gradient(#1F7A8C 0%, #000 80%);}}
